# wirenec-meta-optimization

./: .gitignore  pyproject.toml
wirenec_optimization/: experiment_reproducer.py  generate_configs.py  optimize.py  run_metrics.py  temp-plot.html
wirenec_optimization/data/reproduced_experiments/: scat_data_wire_1000_6.csv
wirenec_optimization/export_utils/: utils.py
wirenec_optimization/metrics/: metrics.py
wirenec_optimization/notebooks/: create_sphere.ipynb
wirenec_optimization/optimization_configs/: single_layer_config.yaml  single_layer_config_spatial.yaml  single_layer_config_sphere.yaml  single_layer_config_srr.yaml  single_layer_config_ssr.yaml  single_layer_config_ssrr.yaml  utils.py
wirenec_optimization/optimization_utils/: bandwidth_creating.py  cmaes_optimizer.py  hyperparams.py  visualization.py
wirenec_optimization/parametrization/: CST_comparing.py  Resonator_3x3.py  Two graphics.py  geometry_specifications.py  layers_parametrization.py  optimized_geometry.pkl  plot_incorrect_geometry.py  sample_objects.py  sample_objects_old_1.py  spatial_parametrization.py
wirenec_optimization/spatial_spectra_creation/: parametrization.py  spatial_producer_config.yaml  spectra_data_creation.py
wirenec_optimization/spatial_spectra_creation/data/seed_1/: scat_data.json
wirenec_optimization/spatial_spectra_creation/data/seed_1/hyperparams/: parametrization_hyperparams.json  scattering_hyperparams.json  seed_hyperparams.json
wirenec_optimization/spatial_spectra_creation/data/seed_2/: scat_data.json
(+8 files in other folders)
