[tool.poetry]
name = "wirenec-meta-optimization"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "wirenec_optimization"},
]

[tool.poetry.dependencies]
python = "^3.11"
wirenec = {git = "https://github.com/konstantgr/WireNEC"}
matplotlib = "^3.6.2"
cmaes = "^0.9.0"
tqdm = "^4.64.1"
scipy = "^1.9.3"
bayesianoptimization = "^0.0.0"
bayesian-optimization = "^1.4.2"
pandas = "^2.1.4"
omegaconf = "^2.3.0"
ruff = "^0.2.2"
seaborn = "^0.13.2"
plotly = "^5.20.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
